# format_example

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_build.sh
src/: CMakeLists.txt
src/elf/: CMakeLists.txt  main.cpp
